Fixed backup, spacing fix needed

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,7 +24,7 @@ img {
   align-items: center;
 }
 
-info {
+.info {
   display: flex;
   flex-direction: column;
   align-items: center;
